--- a/AkademietTest2/AkademietTest2.csproj
+++ b/AkademietTest2/AkademietTest2.csproj
@@ -32,6 +32,8 @@
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-ios|AnyCPU'">
 	  <CreatePackage>false</CreatePackage>
+	  <CodesignKey>iPhone Developer</CodesignKey>
+	  <CodesignProvision>Automatic</CodesignProvision>
 	</PropertyGroup>
 	<ItemGroup>
 		<!-- App Icon -->
@@ -52,4 +54,23 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Remove="Resources\Images\Gerald_G_Victorian_House_1.svg" />
+	  <None Remove="Resources\.DS_Store" />
+	  <None Remove="Resources\Images\house.svg" />
+	</ItemGroup>
+	<ItemGroup>
+	  <BundleResource Include="Resources\Images\house.svg" />
+	  <BundleResource Include="Resources\.DS_Store" />
+	  <BundleResource Include="Resources\Images\house.svg" />
+	  <BundleResource Include="Resources\Images\house.svg" />
+	</ItemGroup>
+	<ItemGroup>
+	  <MauiXaml Update="ItemsList.xaml">
+	    <SubType></SubType>
+	  </MauiXaml>
+	</ItemGroup>
+	<ItemGroup>
+	  <MauiImage Remove="Resources\Images\house.svg" />
+	</ItemGroup>
 </Project>
